# template-bun-rust-library

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: check-rust-dependencies.yml
src/: lib-path.ts  lib.rs  lib.ts
tests/: integration_test.rs  lib_path_test.ts
